test/Fail/Issue260b.agda
-- Module shadowing using generated modules for records and datatypes
module Issue260b where

module R where
record R : Set where
